# cqpes-legacy

./: .gitignore  README.md  env.yml  export_model.sh  prepare.sh  pyproject.toml  train.sh
config/: export.json  export_model.json  prepare.json  train.json
cqpes/: __init__.py  _env.py
cqpes/cli/: entries.py
cqpes/interface/: __init__.py  ase.py  potential.py
cqpes/module/: export.py  prepare.py  test.py  train.py
cqpes/pipeline/: export.py  predict.py  prepare.py  run.py  test.py  train.py
cqpes/types/: __init__.py  data.py  prepare.py  train.py
cqpes/utils/: logger.py  model.py  msa.py  train.py  workspace.py
data/: V.npy  V_max.npy  p_max.npy  p_min.npy  y.npy
example/CH4/: ch4_input.xyz  ch4_nve.py  ch4_nve.xyz  ch4_opt_freq.py
example/CH4/interface/Fortran/: CMakeLists.txt  energy.txt  weights.txt
examples/CH4/: README.md
examples/H3S/: README.md  geom.xyz
interface/Gaussian/: CH4-opt-freq.out
interface/VENUS96/: Makefile  ch4.out  ch4_interface.f90  ch4_pipnn.f90  fort.28  fort.7  fort.9  fort.999
model-2024-06-29 16:24:34.294319/: biases.txt  ch4_pip_nn.h5  test_idx.txt  train_idx.txt  valid_idx.txt  weights.txt
model-2024-06-29 16:24:34.294319/ckpt/: model-epoch-0001-val-mse-4.66814e-01.h5  model-epoch-0002-val-mse-4.19527e-01.h5  model-epoch-0003-val-mse-2.80130e-01.h5  model-epoch-0004-val-mse-1.47616e-01.h5  model-epoch-0005-val-mse-7.93505e-02.h5  model-epoch-0006-val-mse-4.72584e-02.h5  model-epoch-0007-val-mse-1.09037e-02.h5  model-epoch-0008-val-mse-6.82845e-03.h5  model-epoch-0009-val-mse-2.90422e-03.h5  (+843 more)
(+545 files in other folders)
